// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`disabling resource name hashes at chart level 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Resource1",
    "metadata": {
      "name": "test-resource1",
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Resource3",
    "metadata": {
      "name": "test-resource2",
    },
  },
]
`;

exports[`empty stack 1`] = `[]`;

exports[`output includes all synthesized resources 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Resource1",
    "metadata": {
      "name": "test-resource1-c85cb0fc",
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Resource2",
    "metadata": {
      "name": "test-resource2-c8c6bd27",
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Resource3",
    "metadata": {
      "name": "test-resource3-c8ccc739",
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Resource1",
    "metadata": {
      "name": "test-scope-resource1-c84ac5c2",
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Resource2",
    "metadata": {
      "name": "test-scope-resource2-c889750d",
    },
  },
]
`;

exports[`resource name hashes work by default 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Resource1",
    "metadata": {
      "name": "test-resource1-c85cb0fc",
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Resource3",
    "metadata": {
      "name": "test-resource2-c8c6bd27",
    },
  },
]
`;

exports[`synthesizeManifest() can be used to synthesize a specific chart 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Kind1",
    "metadata": {
      "name": "chart-obj1-c80aa35c",
    },
  },
  {
    "apiVersion": "v1",
    "kind": "Kind2",
    "metadata": {
      "name": "chart-obj2-c8016fab",
    },
  },
]
`;

exports[`tokens are resolved during synth 1`] = `
[
  {
    "apiVersion": "v1",
    "kind": "Resource1",
    "metadata": {
      "name": "test-resource1-c85cb0fc",
    },
    "spec": {
      "foo": 123,
      "implicitToken": {
        "foo": "bar",
      },
    },
  },
]
`;
